--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -28,6 +28,7 @@
 
             <div class="btn-group pull-right" role="group">
                 <button class="btn btn-xs btn-default edit">Edit</button>
+                <button class="btn btn-xs btn-default delete">Delete</button>
             </div>
         </li>
         <% } %>
