--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -15,7 +15,7 @@
         <ul></ul>
     </div>
 </div>
-<script src="../static/jquery-2.2.0.js"></script>
+<script src="/lib/jquery/dist/jquery.js"></script>
 <script src="../static/app.js"></script>
 <script src="../static/todo.js"></script>
 <script type="text/html" id="list_todos">
